--- a/templates/user_pages/components/common/header.html
+++ b/templates/user_pages/components/common/header.html
@@ -61,6 +61,7 @@
             </svg>
           </span>
           <input
+            id="myInput"
             type="text"
             placeholder="Search"
             class="w-full px-4 py-3 text-gray-600 rounded-md focus:bg-gray-100 focus:outline-none"
