--- a/templates/user_pages/components/find_buddies/user_tables.html
+++ b/templates/user_pages/components/find_buddies/user_tables.html
@@ -4,9 +4,9 @@
       <div
         class="overflow-hidden border-b border-gray-200 rounded-md shadow-md"
       >
-        <table class="min-w-full overflow-x-scroll divide-y divide-gray-200">
+        <table id="myTable" class="min-w-full overflow-x-scroll divide-y divide-gray-200">
           <thead class="bg-gray-50">
-            <tr>
+            <tr class="t_head">
               <th
                 scope="col"
                 class="px-6 py-3 text-xs font-medium tracking-wider text-left text-gray-500 uppercase"
