--- a/templates/user_pages/find_buddies.html
+++ b/templates/user_pages/find_buddies.html
@@ -10,7 +10,8 @@
   type="text/css"
   href="{% static 'css/user_pages/dashboard.css' %}"
 />
-
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    
 
 {% endblock %} {% block content %}
 <div class="antialiased text-gray-900 bg-white">
