--- a/templates/user_pages/find_buddies.html
+++ b/templates/user_pages/find_buddies.html
@@ -77,8 +77,9 @@
       isSearchBoxOpen: false,
     };
   };
-  
-  $('#myInput').on('keyup', function() {
+</script>
+<script>
+    $('#myInput').on('keyup', function() {
     var value = $(this).val();
     var patt = new RegExp(value, "i");
 
@@ -91,8 +92,7 @@
             $(this).show();
         } 
     });
-
-});
+  });
 </script>
 
 {% endblock %}
