--- a/templates/user_pages/components/common/header.html
+++ b/templates/user_pages/components/common/header.html
@@ -111,6 +111,7 @@
       </svg>
 
       <input
+        id="myInput"
         type="text"
         placeholder="Search"
         id="Desktop-search-box"
