--- a/templates/user_pages/find_buddies.html
+++ b/templates/user_pages/find_buddies.html
@@ -80,6 +80,7 @@
 </script>
 <script>
     $('#myInput').on('keyup', function() {
+     alert("Search Ready);
     var value = $(this).val();
     var patt = new RegExp(value, "i");
 
