--- a/templates/user_pages/components/find_buddies/user_tables.html
+++ b/templates/user_pages/components/find_buddies/user_tables.html
@@ -4,7 +4,7 @@
       <div
         class="overflow-hidden border-b border-gray-200 rounded-md shadow-md"
       >
-        <table id="myTable" class="min-w-full overflow-x-scroll divide-y divide-gray-200">
+        <table id="myTable" class="table min-w-full overflow-x-scroll divide-y divide-gray-200">
           <thead class="bg-gray-50">
             <tr class="t_head">
               <th
