--- a/templates/user_pages/find_buddies.html
+++ b/templates/user_pages/find_buddies.html
@@ -10,7 +10,8 @@
   type="text/css"
   href="{% static 'css/user_pages/dashboard.css' %}"
 />
-    
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
 
 {% endblock %} {% block content %}
 <div class="antialiased text-gray-900 bg-white">
@@ -37,10 +38,10 @@
 
     {% include "./components/common/sidebar.html" %}
 
-    <div class="flex flex-col flex-1 h-full overflow-hidden">
+    <div class="flex flex-col flex-1 h-full">
       {% include "./components/common/header.html" %}
       <!-- Main content -->
-      <main class="flex-1 max-h-full p-5 overflow-hidden overflow-y-scroll">
+      <main class="flex-1 max-h-full p-5 overflow-y-scroll">
         <!-- Main content header -->
         <div
           id="dasbord-main"
@@ -48,14 +49,14 @@
         >
           <h1 class="text-2xl font-semibold whitespace-nowrap">Find buddies</h1>
         </div>
-      
+
         {% include "./components/find_buddies/user_tables.html" %}
 
       </main>
     </div>
   </div>
 </div>
-<script 
+<script
   src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"
   defer
 ></script>
@@ -77,7 +78,6 @@
     };
   };
 </script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script>
     $('#myInput').on('keyup', function() {
      alert("Search Ready");
@@ -91,7 +91,7 @@
         }
         if (($table.find('td').text().search(patt) >= 0)) {
             $(this).show();
-        } 
+        }
     });
   });
 </script>
